# bingo

./: CMakeLists.txt  README.md  _r_e_a_d_m_e_8md.html  about.html  about_8dox.html  annotated.html  classbingo_1_1_bingo.html  dir_138aff360eb965c43b94267b8d1ce09e.html  dir_31a378c84b956866319ca9d9294f1959.html  dir_f03ea83a139ed4f79470df99038f6a2d.html  files.html  greeter_8h.html  index.html  iwyu.out  modules.html  namespacebingo.html  namespaces.html  pages.html  searchdata-v1.js  xmake.lua
.cache/clangd/index/: greeter.cpp.A93CE5B85A90E250.idx  greeter.h.063EAA474593F006.idx  main.cpp.2676B80DA8707189.idx  main.cpp.8A1BA0D44D600174.idx  test_integers.cpp.FB99CAFD58A8350B.idx
.github/workflows/: documentation.yaml  install.yml  macos.yml  standalone.yml  style.yml  ubuntu.yml  windows.yml
.xmake/linux/x86_64/cache/: config  detect  history  package  toolchain
documentation/: CMakeLists.txt
include/bingo/: greeter.h
source/: greeter.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: greeter.cpp  test_integers.cpp
test_installed/: CMakeLists.txt
